<resources>
    <string name="app_name">Градски Транспорт София</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="station_code">Код на спирката</string>
    <string name="button_search">Търсене</string>
    <string name="button_favourite">Запази</string>
    <string name="search">Търсене по код</string>
    <string name="favourites">Любими</string>
    <string name="lines">Линии</string>
    <string name="map">Карта</string>
    <string name="choose_startup_screen">Екран по подразбиране</string>
    <string name="default_startup_screen">@string/settings_search_value</string>
    <string name="settings_search_value">search</string>
    <string name="settings_favourites_value">favourites</string>
    <string name="settings_lines_value">lines</string>
    <string name="settings_map_value">map</string>
    <string name="dark_theme">Тъмна</string>
    <string name="light_theme">Светла</string>
    <string name="auto_theme">Автоматична (зависи от системната)</string>

    <string name="dark_theme_value">dark</string>
    <string name="light_theme_value">light</string>
    <string name="auto_theme_value">auto</string>

    <string name="query_method_slow_value">slow</string>
    <string name="query_method_fast_value">fast</string>
    <string name="query_method_slow">Бавно (повече времена)</string>
    <string name="query_method_fast">Бързо (по-малко времена, с опция за допълнителни)</string>
    <string name="query_method_default">@string/query_method_slow_value</string>

    <string name="key_time_mode">time_or_remaining_time</string>
    <string name="time_mode_title">Часове или оставащо време</string>
    <string name="time_mode_summary">Времената на пристигащия транспорт да бъдат в формат "час на пристигане" или "оставащо време до пристигане"</string>
    <string name="time_mode_time_value">time</string>
    <string name="time_mode_remaining_time_value">remaining_time</string>
    <string name="time_mode_default">@string/time_mode_remaining_time_value</string>
    <string name="time_mode_time">Час на пристигане</string>
    <string name="time_mode_remaining_time">Оставащо време до пристигане</string>

    <string name="summary_startup_screen">Кой да бъде началният екран (Любими, Карта и т.н.)</string>
    <string name="key_choose_startup_screen">choose_startup_screen</string>
    <string name="key_choose_theme">choose_theme</string>
    <string name="choose_theme">Тема</string>
    <string name="theme_summary">Дали темата да бъде тъмна или светла</string>
    <string name="key_choose_query_method">choose_query_method</string>
    <string name="choose_query_method">Взимане на времена</string>
    <string name="query_method_summary">Дали да се използва бързият или бавният начин за взимане на времената</string>

    <string name="search_method_summary">По подразбиране да се търси по код или по име на спирката</string>
    <string name="key_choose_search_method">choose_search_method</string>
    <string name="search_method_title">Търсене по код или по име на спирка</string>

    <string name="search_method_code">Код</string>
    <string name="search_method_name">Име</string>

    <string name="search_method_code_value">code</string>
    <string name="search_method_name_value">name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_button">Още</string>
    <string name="stop_name">Име на спирката</string>
    <string name="show_all_on_map">Всички на картата</string>
    <string name="exclamation_mark_tooltip_warning_bg">Информацията е от разписанието и е ориентировъчна!</string>
    <string name="search_toggle_code">Код</string>
    <string name="search_toggle_name">Име</string>
    <string name="search_toggle_ground">Наземен</string>
    <string name="search_toggle_subway">Метро</string>

    <string name="please_wait_stop_info_updating">Информацията за спирките се обновява. Моля изчакайте.</string>
    <string name="without_access_to_location_wont_function_properly">Без достъп до местоположението някои от функциите няма да работят правилно.</string>
</resources>
