<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/key_choose_startup_screen"
        android:title="@string/choose_startup_screen"
        android:entries="@array/choose_screen_human_readable"
        android:entryValues="@array/choose_screen_values"
        android:defaultValue="@string/default_startup_screen"
        android:summary="@string/summary_startup_screen"
        />

    <ListPreference
        android:key="@string/key_choose_theme"
        android:title="@string/choose_theme"
        android:entries="@array/choose_theme_human_readable"
        android:entryValues="@array/choose_theme_values"
        android:defaultValue="@string/light_theme_value"
        android:summary="@string/theme_summary"
        />

</PreferenceScreen>